e2e/fixtures/gateway/rewritetarget/full-path-regex.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gateway-full-path-regex-test-redirect
  namespace: default
spec:
  redirectRegex:
    regex: "^https?://[^/]+/original/?(.*)"
    replacement: "https://bar.example.org/${1}"
    permanent: false
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-full-path-regex-test
  namespace: default
spec:
  parentRefs:
    - name: traefik
  hostnames:
    - full-path-regex-test.gateway.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /original
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: gateway-full-path-regex-test-redirect
      backendRefs:
        - name: backend
          port: 80
